added loader,  private route

--- a/app/globals.css
+++ b/app/globals.css
@@ -62,6 +62,9 @@ body {
   .container {
     @apply mx-auto px-6;
   }
+  .loader {
+    @apply flex align-middle justify-center mt-16;
+  }
   .input {
     @apply w-full border-b h-13 pt-5 pb-2 border-border outline-none focus:ring-0 text-base font-medium;
     color: var(--primary);
