--- a/components/SearchComponent/Search/Search.module.css
+++ b/components/SearchComponent/Search/Search.module.css
@@ -11,7 +11,7 @@
 
 
 	.search_wrapper.active {
-		@apply mx-auto px-6 fixed top-[64px] left-0 min-w-full min-h-full bg-white z-30 py-2;
+		@apply mx-auto px-6 fixed top-0 left-0 min-w-full min-h-full bg-white z-30 py-3;
 	}
 
 	.search_wrapper.active .search_box {
@@ -19,7 +19,8 @@
 	}
 
 	.search_wrapper.active .search_text {
-		@apply text-title text-basic placeholder:text-button placeholder:font-medium w-full;
+		@apply text-title text-basic placeholder:text-button placeholder:font-medium w-full placeholder:text-base placeholder:capitalize
+		min-h-6;
 	}
 
 	.search_wrapper.active .search_btn > svg {
