--- a/app/globals.css
+++ b/app/globals.css
@@ -4,14 +4,7 @@
 
 @font-face {
   font-family: "PP Pangram Sans";
-  src: url("/fonts/Pangram Sans/PPPangramSans_Regular.woff2") format("opentype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "PP Pangram Sans";
-  src: url("/fonts/Pangram Sans/PPPangramSans_Medium.woff2") format("opentype");
+  src: url("/fonts/Pangram Sans/PPPangramSans_Medium.otf") format("opentype");
   font-weight: 500;
   font-style: normal;
 }
@@ -25,7 +18,7 @@
 
 @font-face {
   font-family: "PP Pangram Sans";
-  src: url("/fonts/Pangram Sans/PPPangramSans_Bold.woff2") format("opentype");
+  src: url("/fonts/Pangram Sans/PPPangramSans_Bold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
 }
