--- a/components/SearchComponent/Search/Search.module.css
+++ b/components/SearchComponent/Search/Search.module.css
@@ -1,29 +1,29 @@
 @tailwind components;
 
 @layer components {
-	.search_box {
-		@apply flex rounded-button;
-	}
+  .search_box {
+    @apply flex rounded-xl;
+  }
 
-	.search_text {
-		@apply border-none outline-none bg-inherit p-0 text-title text-basic placeholder:text-button placeholder:font-medium w-0 transition duration-300;
-	}
+  .search_text {
+    @apply border-none outline-none bg-inherit p-0 text-title text-sm placeholder:text-base placeholder:font-medium w-0 transition duration-300;
+  }
 
+  .search_wrapper.active {
+    @apply mx-auto overflow-y-auto px-6 pb-14 fixed top-0 bottom-0 right-0 left-0 bg-white z-30 py-3;
+  }
 
-	.search_wrapper.active {
-		@apply mx-auto overflow-y-auto px-6 pb-14 fixed top-0 bottom-0 right-0 left-0 bg-white z-30 py-3;
-	}
+  .search_wrapper.active .search_box {
+    @apply justify-between bg-bgSearch px-4 py-3;
+  }
 
-	.search_wrapper.active .search_box {
-		@apply justify-between bg-bgSearch px-4 py-3;
-	}
-
-	.search_wrapper.active .search_text {
-		@apply text-title text-basic placeholder:text-button placeholder:font-medium w-full placeholder:text-base placeholder:capitalize
+  .search_wrapper.active .search_text {
+    @apply text-title text-sm 
+		 placeholder:font-medium w-full placeholder:text-base placeholder:capitalize
 		min-h-6;
-	}
+  }
 
-	.search_wrapper.active .search_btn > svg {
-		@apply fill-label;
-	}
+  .search_wrapper.active .search_btn > svg {
+    @apply fill-label;
+  }
 }
